--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -58,7 +58,7 @@
 
 	<table class="c1 footer">
 		<tr><td class="n3">
-			<span class="stats">{{ profiler_stats() }}</span>
+			<span class="stats nom">{{ profiler_stats() }}</span>
 
 			<img src="assets/poweredbycirrus.png" class="poweredby" title="~~ I'm in the clouds ~~">
 
