--- a/templates/index.twig
+++ b/templates/index.twig
@@ -24,8 +24,8 @@
 		<table class="c1">
 			<tr class="h">
 				<td colspan="2" class="left">{{ categories[forum.cat] }}</td>
-				<td style="width:60px">Threads</td>
-				<td style="width:60px">Posts</td>
+				<td class="nom" style="width:60px">Threads</td>
+				<td class="nom" style="width:60px">Posts</td>
 				<td style="width:175px">Last post</td>
 			</tr>
 	{% endif %}
@@ -36,8 +36,8 @@
 			<a href="forum.php?id={{ forum.id }}">{{ forum.title }}</a> {% if forum.minread > 0 %}<span class="sfont">(Private)</span>{% endif %}
 			<div style="margin-top:3px">{{ forum.descr | raw }}</div>
 		</td>
-		<td class="n1">{{ forum.threads }}</td>
-		<td class="n1">{{ forum.posts }}</td>
+		<td class="n1 nom">{{ forum.threads }}</td>
+		<td class="n1 nom">{{ forum.posts }}</td>
 		<td class="n2">
 			{% if forum.posts > 0 and forum.lastdate > 0 %}
 				<span>{{ forum.lastdate | date('Y-m-d H:i') }}</span><br>
