--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -17,7 +17,7 @@
 	<table class="c1 autowidth">
 		<tr class="h"><td>Latest posts</td></tr>
 		<tr><td class="n1 center">
-			By thread | <a href="thread.php?time={{ time }}">By post</a>
+			By thread | <a href="thread.php?time={{ time }}">By post</a> (<a href="rss.php">RSS</a>)
 			<br><br>{{ timelinks('forum', time) }}
 		</td></tr>
 	</table><br>
