--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -10,6 +10,8 @@
 	<style>@font-face{font-family:"Open Sans";font-style:normal;font-weight:400;font-display:swap;src:local(""),url("assets/fonts/open-sans-v34-400.woff2") format("woff2"),url("assets/fonts/open-sans-v34-400.woff") format("woff")}@font-face{font-family:"Open Sans";font-style:normal;font-weight:700;font-display:swap;src:local(""),url("assets/fonts/open-sans-v34-700.woff2") format("woff2"),url("assets/fonts/open-sans-v34-700.woff") format("woff")}</style>
 	<link rel="stylesheet" href="/assets/css/style.css">
 	<script src="assets/script.js"></script>
+
+	<link href="rss.php" type="application/atom+xml" rel="alternate">
 </head>
 <body>
 	<table class="c1 header">
