--- a/templates/thread.twig
+++ b/templates/thread.twig
@@ -17,7 +17,7 @@
 	<table class="c1 autowidth">
 		<tr class="h"><td>Latest posts</td></tr>
 		<tr><td class="n1 center">
-			<a href="forum.php?time={{ time }}">By thread</a> | By post
+			<a href="forum.php?time={{ time }}">By thread</a> | By post (<a href="rss.php">RSS</a>)
 			<br><br>{{ timelinks('thread', time) }}
 		</td></tr>
 	</table><br>
