Implement themes, move out voxelmanip_retro into its own theme

--- a/templates/editprofile.twig
+++ b/templates/editprofile.twig
@@ -42,6 +42,9 @@
 
 	<tr class="h"><td colspan="2">Options</td></tr>
 	<tr>
+		<td class="n1 center">Theme:</td>
+		<td class="n2">{{ field_select('theme', user.theme, theme_list()) }}</td>
+	</tr><tr>
 		<td class="n1 center">Timezone:</td>
 		<td class="n2">{{ field_select('timezone', user.timezone, timezones) }}</td>
 	</tr><tr>
