--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -4,6 +4,9 @@ body {
 	margin: 5px auto 25px;
 	font-size: 12pt;
 	max-width: 1440px;
+	background-color: black;
+	color: white;
+	font-family: 'Open Sans', sans-serif;
 }
 table.c1 {
 	border-spacing: 0px;
@@ -80,6 +83,9 @@ a:active, a:hover	{ color: #FFFFFF }
 		padding-left: 10px;
 		padding-right: 10px;
 		margin: 10px auto;
+		border-top: 1px solid #c2c2c2;
+
+		&:last-child {border-bottom:0}
 	}
 
 	span {
@@ -108,7 +114,8 @@ a:active, a:hover	{ color: #FFFFFF }
 	}
 }
 
-/* Footer */
+/// Footer \\\
+
 .footer {
 	font-size: 0.85em;
 
@@ -223,7 +230,12 @@ table.postformatting {
 	}
 }
 
-// Spoilers
+/// Default input styling \\\
+input[type='text'], input[type='password'], input[type='email'], textarea, select, input[type='submit'], input[type='button'], button {
+	font-size: 1em;
+}
+
+/// Spoilers \\\
 
 .spoiler {
 	border: 2px dotted #bebebe;
@@ -233,7 +245,7 @@ table.postformatting {
 	.container:hover { opacity: 1; }
 }
 
-// Quotes
+/// Quotes \\\
 
 .quote {
 	margin: 10px 30px 30px 30px;
@@ -246,14 +258,14 @@ table.postformatting {
 	}
 
 	.quotetext {
-		/*border: 2px solid #38c016;
+		border: 2px solid #c2c2c2;
 		border-left: 0;
-		border-right: 0;*/
+		border-right: 0;
 		padding: 5px;
 	}
 }
 
-// FAQ styling
+/// FAQ styling \\\
 
 .faq {
 	p {
@@ -307,72 +319,4 @@ table.postformatting {
 	content: "";
 	display: table;
 	clear: both;
-}
-
-/// Example theme styling (voxelmanip_retro) \\\
-
-$primary: #38c016;
-
-body {
-	background: url('../coolgreen2.png') #011b01;
-	color: #f8f8f8;
-	font-family: 'Open Sans', sans-serif;
-}
-
-table.c1 {
-	border: 2px solid $primary;
-
-	tr.h {
-		font-weight: bold;
-	}
-
-	tr.c, tr.h {
-		font-size: 0.95em;
-		text-align: center;
-	}
-
-	td {
-		border: 1px solid $primary;
-		padding: 5px;
-	}
-
-	tr.h, td.h {
-		background: rgba(32,98,2,0.8);
-	}
-
-	tr.n1, td.n1 { background: rgba(5, 9, 3, 0.6); }
-	tr.n2, td.n2 { background: rgba(16, 48, 2, 0.65); }
-	tr.n3, td.n3 { background: rgba(0,0,0,0.6); }
-}
-
-input[type='text'], input[type='password'], input[type='email'], textarea, select, input[type='submit'], input[type='button'], button {
-	background: #000;
-	color: #efe;
-	padding: 4px;
-	border: 2px solid #106202;
-	font-family: 'Verdana', 'geneva', sans-serif;
-	font-size: 1em;
-}
-
-input[type='submit'], input[type='button'], button {
-	background: #021800;
-	font-weight: bold;
-	padding: 5px 10px;
-}
-
-input[type='text']:hover, input[type='password']:hover, input[type='email']:hover, textarea:hover, select:hover, input[type='text']:focus, input[type='password']:focus, input[type='email']:focus, textarea:focus, select:focus,
-input[type='submit']:hover, input[type='button']:hover, button:hover, input[type='submit']:focus, input[type='button']:focus, button:focus {
-	border: 2px solid $primary;
-}
-
-.reglog div {
-	border-top: 1px solid $primary;
-
-	&:last-child {border-bottom:0}
-}
-
-.quote .quotetext {
-	border: 2px solid $primary;
-	border-left: 0;
-	border-right: 0;
 }
