--- a/templates/newreply.twig
+++ b/templates/newreply.twig
@@ -11,7 +11,7 @@
 	{{ threadpost(post) }}
 {% endif %}
 
-<form method="POST"><table class="c1 postform">
+<form action="newreply.php?id={{ id }}" method="POST"><table class="c1 postform">
 	<tr class="h"><td colspan="2">New reply</td></tr>
 	<tr class="n1">
 		<td class="nb center" style="width:120px;height:32px"><strong>Title:</strong></td>
