--- a/templates/credits.twig
+++ b/templates/credits.twig
@@ -6,11 +6,13 @@
 <table class="c1 faq">
 	<tr class="h"><td>Credits</td></tr>
 	<tr><td class="n1">
-		<p>Cirrusboard is a minimally lightweight forum software powering {{ config.title }}. It is heavily inspired by the Acmlmboard type of forums, yet bringing modernity to the table with a cleaner codebase while remaining fast and lightweight.</p>
+		<p>Cirrusboard is a minimally lightweight forum software powering {{ config.title }}. It is inspired by the Acmlmboard type of forums, yet bringing modernity to the table with a cleaner codebase while remaining fast and lightweight.</p>
 
 		<p>Cirrusboard is licensed under the MIT license, allowing you to make use of it in any way you see fit, given attribution:</p>
 
-		<div class="codeblock" style="width:auto;display:inline-block">Copyright (c) 2022 ROllerozxa
+		<div class="codeblock" style="width:auto;display:inline-block">Cirrusboard - Minimal forum software written in PHP
+
+Copyright (c) 2022 ROllerozxa
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
@@ -29,6 +31,8 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.</div>
+
+		<p><strong>The developers of Cirrusboard are not responsible for content on third-party forums running it.</strong> If you have issues with a forum running Cirrusboard then please contact the forum's administrator(s) or contact the host's abuse email.</p>
 
 		<p>The following libraries are used:</p>
 		<ul>
