--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -107,11 +107,15 @@ a:active, a:hover	{ color: #FFFFFF }
 }
 
 .pagination {
-	margin: 1.75em 10px 0;
+	margin: 1.75em 10px;
 
 	span {
 		padding: 0 5px;
 	}
+}
+
+.br-after {
+	margin-bottom: 1.75em;
 }
 
 /// Footer \\\
@@ -205,7 +209,7 @@ ul.pipemenu {
 		max-width: 900px;
 	}
 
-	.actionbar {
+	.actionbar, .actionbar-quick {
 		text-align: center;
 
 		input[type=submit] {
