--- a/templates/forum.twig
+++ b/templates/forum.twig
@@ -14,14 +14,16 @@
 
 	{% block content %}
 {% if viewmode == "time" %}
-	<table class="c1 autowidth">
+	<table class="c1 autowidth br-after">
 		<tr class="h"><td>Latest posts</td></tr>
 		<tr><td class="n1 center">
 			By thread | <a href="thread.php?time={{ time }}">By post</a> (<a href="rss.php">RSS</a>)
 			<br><br>{{ timelinks('forum', time) }}
 		</td></tr>
-	</table><br>
+	</table>
 {% endif %}
+
+{{ pagelist | raw }}
 
 <table class="c1">
 	<tr class="h">
