--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -73,6 +73,9 @@ a:active, a:hover	{ color: #FFFFFF }
 .center { text-align: center; }
 .right { text-align: right; }
 
+.float-left { float: left; }
+.float-right { float: right; }
+
 .reglog {
 	text-align: center;
 
