--- a/templates/search.twig
+++ b/templates/search.twig
@@ -3,7 +3,7 @@
 {% set title = "Search" %}
 
 	{% block content %}
-<form action="search" method="get"><table class="c1">
+<form action="search.php" method="get"><table class="c1">
 	<tr class="h"><td>Search</td>
 	<tr><td class="n1 center">
 		<p>Search for: <input type="text" name="query" size="40" value="{{ query }}"></p>
