--- a/templates/editprofile.twig
+++ b/templates/editprofile.twig
@@ -27,15 +27,15 @@
 		<td class="n1 center">Title:</td>
 		<td class="n2">{{ field_input('title', user.title, 40, 255) }}</td>
 	</tr><tr>
-		<td class="b n1 center">Avatar:</td>
-		<td class="b n2"><input type="file" name="avatar" size="40"> or {{ field_checkbox('picturedel', 0, "Erase existing avatar") }}
+		<td class="n1 center">Avatar:</td>
+		<td class="n2"><input type="file" name="avatar" size="40"> or {{ field_checkbox('picturedel', 0, "Erase existing avatar") }}
 			<br>Must be PNG, JPG or GIF, within 100kB and 180x180.</td>
 	</tr>
 
 	<tr class="h"><td colspan="2">User information</td></tr>
 	<tr>
 		<td class="n1 center">Location:</td>
-		<td class="n2">{{ field_input('location', user.location, 40, 60) }}</td>
+		<td class="n2">{{ field_input('location', user.location, 40, 60, "Location") }}</td>
 	</tr><tr>
 		<td class="n1 center">Birthday:</td>
 		<td class="n2">
@@ -47,7 +47,7 @@
 		<td class="n2">{{ field_textarea('bio', user.bio, 5, 80) }}</td>
 	</tr><tr>
 		<td class="n1 center">Email address:</td>
-		<td class="n2">{{ field_input('email', user.email, 40, 60) }}
+		<td class="n2">{{ field_input('email', user.email, 40, 60, "email@example.org") }}
 			<br>{{ field_checkbox('showemail', user.showemail, "Show email on profile page") }}</td>
 	</tr>
 
@@ -60,10 +60,10 @@
 		<td class="n2">{{ field_select('timezone', user.timezone ?? config.defaulttimezone, timezones) }}</td>
 	</tr><tr>
 		<td class="n1 center">Posts per page:</td>
-		<td class="n2">{{ field_input('ppp', user.ppp, 3, 3) }}</td>
+		<td class="n2">{{ field_input('ppp', user.ppp, 3, 3, 20) }}</td>
 	</tr><tr>
 		<td class="n1 center">Threads per page:</td>
-		<td class="n2">{{ field_input('tpp', user.tpp, 3, 3) }}</td>
+		<td class="n2">{{ field_input('tpp', user.tpp, 3, 3, 20) }}</td>
 	</tr>
 
 	<tr class="h"><td colspan="2">&nbsp;</td></tr>
