--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -67,10 +67,10 @@
 		<tr><td class="n3">
 			<span class="stats nom">{{ profiler_stats() }}</span>
 
-			<img src="assets/poweredbycirrus.png" class="poweredby" title="~~ I'm in the clouds ~~">
+			<img src="assets/poweredbyvoxelmanip.png" class="poweredby" title="like a warm hug from someone you love">
 
-			Cirrusboard<br>
-			&copy; 2022 ROllerozxa, <a href="credits.php">et al</a>.
+			Voxelmanip Forums (Cirrusboard)<br>
+			&copy; 2022-2023 ROllerozxa, <a href="credits.php">et al</a>.
 		</td></tr>
 	</table>
 
