--- a/templates/activeusers.twig
+++ b/templates/activeusers.twig
@@ -1,6 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% set title = "Active users" %}
+{% set noindex = true %}
 
 	{% block content %}
 <table class="c1 autowidth">
