--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,6 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% set title = "Login" %}
+{% set noindex = true %}
 
 	{% block content %}
 <form class="reglog" method="POST"><table class="c1">
