--- a/templates/search.twig
+++ b/templates/search.twig
@@ -1,6 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% set title = "Search" %}
+{% set noindex = true %}
 
 	{% block content %}
 <form action="search.php" method="get"><table class="c1">
