--- a/templates/credits.twig
+++ b/templates/credits.twig
@@ -1,6 +1,7 @@
 {% extends "_layout.twig" %}
 
 {% set title = "Credits" %}
+{% set noindex = true %}
 
 	{% block content %}
 <table class="c1 faq">
