--- a/templates/thread.twig
+++ b/templates/thread.twig
@@ -10,10 +10,19 @@
 			{% set actions = {"none" : "Thread locked"} %}
 		{% endif %}
 	{% endif %}
+
+	{% set pagename = "/thread.php?id=" ~ id %}
+	{% if pid %}
+		{% set noindex = true %}
+	{% endif %}
 {% elseif viewmode == "user" %}
 	{% set title = "Posts" %}
+	{% set pagename = "/thread?user=" ~ uid %}
+	{% set noindex = true %}
 {% elseif viewmode == "time" %}
 	{% set title = "Latest posts (by post)" %}
+	{% set pagename = "/thread?time=" ~ time %}
+	{% set noindex = true %}
 {% endif %}
 
 	{% block content %}
