--- a/templates/newthread.twig
+++ b/templates/newthread.twig
@@ -12,24 +12,5 @@
 	{{ threadpost(post) }}
 {% endif %}
 
-<form method="POST"><table class="c1 postform">
-	<tr class="h"><td colspan="2">New thread</td></tr>
-	<tr class="n1">
-		<td class="nb center" style="width:120px"><strong>Title:</strong></td>
-		<td class="nb"><input type="text" name="title" style="width:60%" value="{{ threadtitle }}"></td>
-	</tr>
-	<tr class="n1">
-		<td class="nb"></td>
-		<td class="nb">
-			{{ posttoolbar() }}
-
-			<textarea name="message" id="message" rows="12" cols="80">{{ message }}</textarea>
-
-			<div class="actionbar">
-				<input type="submit" name="action" value="Preview">
-				<input type="submit" name="action" value="Submit">
-			</div>
-		</td>
-	</tr>
-</table></form>
+{{ postform('', 'New thread', threadtitle, message, true) }}
 	{% endblock %}
