--- a/templates/memberlist.twig
+++ b/templates/memberlist.twig
@@ -8,7 +8,7 @@
 		<td class="h" style="width:32px">#</td>
 		<td class="h" style="width:62px">Picture</td>
 		<td class="h">Name</td>
-		<td class="h" style="width:140px">Registered on</td>
+		<td class="h nom" style="width:140px">Registered on</td>
 		<td class="h" style="width:50px">Posts</td>
 	</tr>
 {% for user in users %}
@@ -16,7 +16,7 @@
 		<td>{{ user.id }}.</td>
 		<td>{% if user.avatar %}<img src="userpic/{{ user.id }}" width=60 height=60>{% endif %}</td>
 		<td class="left">{{ userlink(user) }}</td>
-		<td>{{ user.joined | date("Y-m-d H:i") }}</td>
+		<td class="nom">{{ user.joined | date("Y-m-d H:i") }}</td>
 		<td>{{ user.posts }}</td>
 	</tr>
 {% endfor %}
