--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>{% if title != 'Index' %}{{ title }} - {% endif %}{{ config.title }}</title>
 
@@ -25,7 +25,7 @@
 <body>
 	<table class="c1 header">
 		<tr><td class="n1 text" colspan="2">
-			<a href="./"><img src="{{ config.logo }}"></a>
+			<a href="./"><img alt="{{ config.title }}" src="{{ config.logo }}"></a>
 		</td></tr>
 		<tr>
 			<td class="n2 nb menu">
