Tell newly registering users to read the fuqqing faq

--- a/templates/register.twig
+++ b/templates/register.twig
@@ -25,6 +25,8 @@
 		</div>
 
 		<div><input type="submit" class="submit" name="action" value="Register"></div>
+
+		<p>Before registering <a href="faq.php">please read the FAQ</a>, as it contains the privacy policy and rules of this board.</p>
 	</td>
 </table></form>
 	{% endblock %}
