--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -2,7 +2,7 @@
 body {
 	line-height: 1.3;
 	margin: 5px auto 25px;
-	font-size: 11.5pt;
+	font-size: 11.75pt;
 	max-width: 1440px;
 	background-color: black;
 	color: white;
@@ -23,6 +23,11 @@ table.c1 {
 
 img {
 	max-width: 100%;
+}
+
+hr {
+	border: 0;
+	border-top: 2px solid white;
 }
 
 /// Links \\\
@@ -67,6 +72,7 @@ a:active, a:hover	{ color: #FFFFFF }
 .footer {
 	margin-top: 1.75em;
 }
+
 
 .left { text-align: left; }
 .center { text-align: center; }
