--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -81,6 +81,24 @@ a:active, a:hover	{ color: #FFFFFF }
 .float-left { float: left; }
 .float-right { float: right; }
 
+.two-columns {
+	display: block;
+
+	table {
+		margin: 15px 0px;
+	}
+
+	@media only screen and (min-width: 1024px) {
+		display: flex;
+		align-items: flex-start;
+
+		table {
+			margin: 0px 10px;
+		}
+	}
+}
+
+
 .reglog {
 	text-align: center;
 
