Reduce redundancy in voxelmanip retro theme, fix signsep

--- a/templates/memberlist.twig
+++ b/templates/memberlist.twig
@@ -5,11 +5,11 @@
 	{% block content %}
 <table class="c1">
 	<tr class="h">
-		<td class="h" style="width:32px">#</td>
-		<td class="h" style="width:62px">Picture</td>
-		<td class="h">Name</td>
-		<td class="h nom" style="width:140px">Registered on</td>
-		<td class="h" style="width:50px">Posts</td>
+		<td style="width:32px">#</td>
+		<td style="width:62px">Picture</td>
+		<td>Name</td>
+		<td class="nom" style="width:140px">Registered on</td>
+		<td style="width:50px">Posts</td>
 	</tr>
 {% for user in users %}
 	<tr class="n1 center" style="height:75px">
